Upgrade from kolz nft ai to kolz academy
Upgrade from kolz nft ai to kolz academy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kolz-nft-ai-client",
+  "name": "kolz-academy-client",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -7,5 +7,10 @@
   },
   "dependencies": {
     "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7"
   }
 }
